exports[`AddResource adds a resource 1`] = `
<div>
  <form
    onSubmit={[Function]}>
    <input
      placeholder="title"
      required={true} />
    <input
      placeholder="url"
      required={true} />
    <input
      placeholder="description"
      required={true} />
    <button>
      Add
    </button>
  </form>
</div>
`;

exports[`App runs my app 1`] = `
<div>
  <ViewSelector
    onViewSelect={[Function]} />
  <ViewDisplay
    onDelete={[Function]}
    selectedView="" />
  <AddResource
    onAdd={[Function]} />
</div>
`;

exports[`DetailDisplay displays one detail resource 1`] = `
<div>
  <ul>
    <li>
      Title: 
      a
    </li>
    <li>
      Url: 
      b
    </li>
    <li>
      Description: 
      c
    </li>
  </ul>
  <button
    onClick={[Function]}>
    delete
  </button>
</div>
`;

exports[`DetailList displays detail list 1`] = `
<div>
  <DetailDisplay
    onDelete={[Function]}
    resource={
      Object {
        "description": "c",
        "title": "a",
        "url": "b",
      }
    } />
  <DetailDisplay
    onDelete={[Function]}
    resource={
      Object {
        "description": "3",
        "title": "1",
        "url": "2",
      }
    } />
</div>
`;

exports[`GalleryDisplay displays one gallery resource 1`] = `
<div>
  <p>
    Title: 
    a
  </p>
  <img
    alt="Cute Bunny"
    className="gallery"
    src="b" />
  <p>
    Description: 
    c
  </p>
  <button
    onClick={[Function]}>
    delete
  </button>
</div>
`;

exports[`GalleryList displays gallery list 1`] = `
<div>
  <GalleryDisplay
    onDelete={[Function]}
    resource={
      Object {
        "description": "c",
        "title": "a",
        "url": "b",
      }
    } />
  <GalleryDisplay
    onDelete={[Function]}
    resource={
      Object {
        "description": "3",
        "title": "1",
        "url": "2",
      }
    } />
</div>
`;

exports[`ThumbnailDisplay displays one thumbnail resource 1`] = `
<div>
  <p>
    Title: 
    a
  </p>
  <img
    alt="Cute Bunny"
    className="thumbnail"
    src="b" />
  <button
    onClick={[Function]}>
    delete
  </button>
</div>
`;

exports[`ThumbnailList displays thumbnail list 1`] = `
<div>
  <ThumbnailDisplay
    onDelete={[Function]}
    resource={
      Object {
        "description": "c",
        "title": "a",
        "url": "b",
      }
    } />
  <ThumbnailDisplay
    onDelete={[Function]}
    resource={
      Object {
        "description": "3",
        "title": "1",
        "url": "2",
      }
    } />
</div>
`;

exports[`ViewDisplay displays view 1`] = `
<GalleryList
  onDelete={[Function]}
  resources={
    Array [
      Object {
        "description": "c",
        "title": "a",
        "url": "b",
      },
      Object {
        "description": "3",
        "title": "1",
        "url": "2",
      },
    ]
  } />
`;

exports[`ViewSelector selects view 1`] = `
<div
  className="view-selector">
  <button
    onClick={[Function]}>
    List View
  </button>
  <button
    onClick={[Function]}>
    Thumbnail View
  </button>
  <button
    onClick={[Function]}>
    Gallery View
  </button>
</div>
`;
